--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "jshint": "^2.12.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.17.0",
-    "webpack-cli": "4.4.0",
+    "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
   },
