--- a/crates/collection/Cargo.toml
+++ b/crates/collection/Cargo.toml
@@ -17,8 +17,12 @@ lazy_static = "1.4"
 log="0.4"
 regex = "1.5"
 csv = "1.1"
+mime_guess = "2.0"
+unicase = "2.6"
+unicase_serde = "0.1"
 
 [features]
+
 partially-static = ["media_info/partially-static"]
 static = ["media_info/static"]
-
+symlinks = []
