--- a/crates/collection/Cargo.toml
+++ b/crates/collection/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dev_dependencies]
+serde_json ="1.0"
+
 [dependencies]
 
 media_info = {path="../media_info"}
