--- a/crates/collection/Cargo.toml
+++ b/crates/collection/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 
 [dev_dependencies]
 serde_json ="1.0"
+env_logger = "0.9"
+tempdir = "0.3"
 
 [dependencies]
 
@@ -24,6 +26,8 @@ mime_guess = "2.0"
 unicase = "2.6"
 unicase_serde = "0.1"
 ring = "0.16"
+walkdir = "2.3"
+bincode = "1.3"
 
 [features]
 
