--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,7 +57,7 @@ websock = {path="crates/websock", optional = true}
 nix = "0.20"
 
 [features]
-default = ["tls", "symlinks","search-cache", "folder-download", "shared-positions"]
+default = ["tls", "symlinks", "folder-download", "shared-positions"]
 # default
 tls=["tokio-native-tls", "native-tls"]
 symlinks=["cachedirtree/symlinks", "collection/symlinks"]
