--- a/crates/collection/Cargo.toml
+++ b/crates/collection/Cargo.toml
@@ -31,8 +31,10 @@ ring = "0.16"
 bincode = "1.3"
 notify = "4.0"
 
-[features]
+tokio = {version="1", optional=true, features=["rt"]}
 
+[features]
 partially-static = ["media_info/partially-static"]
 static = ["media_info/static"]
+async = ["tokio"]
 symlinks = []
