--- a/crates/collection/Cargo.toml
+++ b/crates/collection/Cargo.toml
@@ -30,6 +30,7 @@ unicase_serde = "0.1"
 ring = "0.16"
 bincode = "1.3"
 notify = "4.0"
+crossbeam-channel = "0.5"
 
 tokio = {version="1", optional=true, features=["rt"]}
 
