collection: Fix logic for is_dir
It was not working for remove, as dir was already removed.
So if it was cached as dir, it should  treated as dir.

--- a/crates/websock/Cargo.toml
+++ b/crates/websock/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 hyper = "0.14"
 tokio = {version="1.2", features=["rt-multi-thread", "time"]}
 futures = "0.3"
-log = {version="0.4", features=["max_level_debug"]}
+log = "0.4"
 tokio-tungstenite = "0.13"
 thiserror = "1.0"
 headers = "0.3"
