--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ members = ["crates/*"]
 [dependencies]
 bytes = "1.0"
 env_logger = "0.8"
-log = {version="0.4", features = ["release_max_level_info"]}
+log = {version="0.4", features = ["release_max_level_info", "max_level_trace"]}
 hyper = {version="0.14", features = ["full"]}
 headers = "0.3"
 futures = "0.3"
