--- a/crates/collection/Cargo.toml
+++ b/crates/collection/Cargo.toml
@@ -31,6 +31,7 @@ ring = "0.16"
 bincode = "1.3"
 notify = "4.0"
 crossbeam-channel = "0.5"
+enum_dispatch = "0.3"
 
 tokio = {version="1", optional=true, features=["rt"]}
 
