--- a/.github/workflows/build_dev_image.yml
+++ b/.github/workflows/build_dev_image.yml
@@ -4,8 +4,25 @@ on:
     - cron: 0 2 * * *
   workflow_dispatch:
 jobs:
+  check_date:
+    runs-on: ubuntu-latest
+    name: Check latest commit
+    outputs:
+      should_run: ${{ steps.should_run.outputs.should_run }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: print latest_commit
+        run: echo ${{ github.sha }}
+
+      - id: should_run
+        continue-on-error: true
+        name: check latest commit is less than a day
+        if: ${{ github.event_name == 'schedule' }}
+        run: test -z $(git rev-list  --after="24 hours"  ${{ github.sha }}) && echo "::set-output name=should_run::false"
   audioserve-build:
     runs-on: ubuntu-20.04
+    needs: check_date
+    if: ${{ needs.check_date.outputs.should_run != 'false' }}
     steps:
     - name: Check docker
       run: |
