--- a/.github/workflows/build_dev_image.yml
+++ b/.github/workflows/build_dev_image.yml
@@ -30,7 +30,7 @@ jobs:
         docker --version
     - uses: actions/checkout@v2
     - name: Build image
-      run: docker build --tag izderadicka/audioserve:unstable --build-arg "features=transcoding-cache" .
+      run: docker build --tag izderadicka/audioserve:unstable --build-arg CARGO_ARG="--features=transcoding-cache" .
     - name: Publish image
       run: |
         docker login -u ${{secrets.DOCKERHUB_USER}} -p ${{secrets.DOCKERHUB_PASSWORD}}
