Update static build

--- a/Dockerfile.static
+++ b/Dockerfile.static
@@ -1,11 +1,14 @@
-FROM alpine:3.13 AS build
+FROM alpine:3.14 AS build
 MAINTAINER Ivan <ivan@zderadicka.eu>
 ENV CARGO_ARGS=""
 ENV FEATURES=""
 
 RUN apk update &&\
+    apk upgrade &&\
     apk add git bash curl yasm build-base openssl-dev openssl-libs-static\
-    wget zlib-dev zlib-static bzip2-static bzip2-dev rust cargo npm &&\
+    wget zlib-dev zlib-static bzip2-static bzip2-dev rustup npm &&\
+    rustup-init -y &&\
+    chmod -R 0777 /root &&\
     mkdir /src &&\
     mkdir /.cargo &&\
     chmod a+rw /.cargo &&\
@@ -13,6 +16,7 @@ RUN apk update &&\
     chmod a+rw /.npm
  
 WORKDIR /src
-ENV RUSTFLAGS="-C target-feature=+crt-static"
+ENV RUSTFLAGS="-C target-feature=+crt-static -C link-self-contained=yes"
+ENV PATH=/root/.cargo/bin:$PATH
 CMD  ["./_build_static.sh"]
 
