--- a/docs/audioserve-api-v1.yaml
+++ b/docs/audioserve-api-v1.yaml
@@ -31,23 +31,10 @@ paths:
         content:
           application/x-www-form-urlencoded:
             schema:
-              type: object
-              properties:
-                secret:
-                  type: string
-                  description: Salted shared secret
-                  example: "w8lTEszPU3idF9sEawmRR3Ps3IVdMEnnaFZj5DV5tqY=|6+iBRdZRz/o6fvwHiEuS2sgDZS6YCw7wNHVX59YCh50="
-              required:
-                - "secret"
+              $ref: "#/components/schemas/SharedSecret"
           application/json:
             schema:
-              type: object
-              properties:
-                secret:
-                  type: string
-                  description: Salted shared secret
-              required:
-                - "secret"
+              $ref: "#/components/schemas/SharedSecret"
 
             examples:
               sample:
@@ -61,6 +48,8 @@ paths:
             text/plain:
               schema:
                 type: string
+                maxLength: 250
+                pattern: '^[a-zA-Z0-9+/]+=*$'
               examples:
                 '0':
                   value: >-
@@ -102,10 +91,9 @@ paths:
                   version:
                     type: string
                     description: Version of audioserve (and thus also version of API)
-              examples:
-                '0':
-                  value: >-
-                    {"version":"0.16.3","folder_download":true,"shared_positions":true,"count":1,"names":["audiobooks"]}
+              example:
+                value:
+                  {"version":"0.16.3","folder_download":true,"shared_positions":true,"count":1,"names":["audiobooks"]}
         "401":
           $ref: "#/components/responses/Unauthorized"
 
@@ -134,10 +122,9 @@ paths:
                     description: Maximum number of parallel transcodings allowed by server
                     minimum: 2
                     maximum: 100
-              examples:
-                '0':
-                  value: >-
-                    {"max_transcodings":24,"low":{"bitrate":32,"name":"opus-in-ogg"},"medium":{"bitrate":48,"name":"opus-in-ogg"},"high":{"bitrate":64,"name":"opus-in-ogg"}}
+              example:
+                value:
+                  {"max_transcodings":24,"low":{"bitrate":32,"name":"opus-in-ogg"},"medium":{"bitrate":48,"name":"opus-in-ogg"},"high":{"bitrate":64,"name":"opus-in-ogg"}}
         "401":
           $ref:  "#/components/responses/Unauthorized"
   
@@ -201,49 +188,50 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/AudioFolder"
-              example: >-
-                {
-                  "is_file": false,
-                  "modified": 1613948393506,
-                  "total_time": 0,
-                  "files": [],
-                  "subfolders": [
-                    {
-                      "name": "Austene Jane",
-                      "modified": 1613941742570,
-                      "path": "Austene Jane",
-                      "is_file": false,
-                      "finished": false
+              example:
+                value: 
+                  {
+                    "is_file": false,
+                    "modified": 1613948393506,
+                    "total_time": 0,
+                    "files": [],
+                    "subfolders": [
+                      {
+                        "name": "Austene Jane",
+                        "modified": 1613941742570,
+                        "path": "Austene Jane",
+                        "is_file": false,
+                        "finished": false
+                      },
+                      {
+                        "name": "Chesterton Gilbert Keith",
+                        "modified": 1613824355322,
+                        "path": "Chesterton Gilbert Keith",
+                        "is_file": false,
+                        "finished": false
+                      },
+                      {
+                        "name": "Doyle Arthur Conan",
+                        "modified": 1613825015324,
+                        "path": "Doyle Arthur Conan",
+                        "is_file": false,
+                        "finished": false
+                      },
+                      {
+                        "name": "Wells H G",
+                        "modified": 1613902871789,
+                        "path": "Wells H G",
+                        "is_file": false,
+                        "finished": false
+                      }
+                    ],
+                    "cover": null,
+                    "description": {
+                      "path": "welcome.md",
+                      "mime": "text/markdown"
                     },
-                    {
-                      "name": "Chesterton Gilbert Keith",
-                      "modified": 1613824355322,
-                      "path": "Chesterton Gilbert Keith",
-                      "is_file": false,
-                      "finished": false
-                    },
-                    {
-                      "name": "Doyle Arthur Conan",
-                      "modified": 1613825015324,
-                      "path": "Doyle Arthur Conan",
-                      "is_file": false,
-                      "finished": false
-                    }
-                    {
-                      "name": "Wells H G",
-                      "modified": 1613902871789,
-                      "path": "Wells H G",
-                      "is_file": false,
-                      "finished": false
-                    }
-                  ],
-                  "cover": null,
-                  "description": {
-                    "path": "welcome.md",
-                    "mime": "text/markdown"
-                  },
-                  "tags": null
-                }
+                    "tags": null
+                  }
         "401":
           $ref: "#/components/responses/Unauthorized"
 
@@ -267,33 +255,33 @@ paths:
                 $ref: "#/components/schemas/AudioFolder"
               examples:
                 "Author folder":
-                  value: >-
-                    {
-                      "is_file": false,
-                      "modified": 1613902871789,
-                      "total_time": 0,
-                      "files": [],
-                      "subfolders": [
-                        {
-                          "name": "Invisible Man",
-                          "modified": 1613902936821,
-                          "path": "Wells H G/Invisible Man",
-                          "is_file": false,
-                          "finished": false
-                        }
-                      ],
-                      "cover": {
-                        "path": "Wells H G/H.G._Wells_by_Beresford.jpg",
-                        "mime": "image/jpeg"
-                      },
-                      "description": {
-                        "path": "Wells H G/info.txt",
-                        "mime": "text/plain"
-                      },
-                      "tags": null
-                    }
+                  value:
+                      {
+                        "is_file": false,
+                        "modified": 1613902871789,
+                        "total_time": 0,
+                        "files": [],
+                        "subfolders": [
+                          {
+                            "name": "Invisible Man",
+                            "modified": 1613902936821,
+                            "path": "Wells H G/Invisible Man",
+                            "is_file": false,
+                            "finished": false
+                          }
+                        ],
+                        "cover": {
+                          "path": "Wells H G/H.G._Wells_by_Beresford.jpg",
+                          "mime": "image/jpeg"
+                        },
+                        "description": {
+                          "path": "Wells H G/info.txt",
+                          "mime": "text/plain"
+                        },
+                        "tags": null
+                      }
                 "Audiobook folder":
-                  value: >-
+                  value: 
                     {
                       "is_file": false,
                       "modified": 1613902936821,
@@ -347,7 +335,7 @@ paths:
                       }
                     }
                 "m4b folder": 
-                  value: >-
+                  value:
                     {
                       "is_file": true,
                       "modified": 1615456636344,
@@ -510,9 +498,10 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/SearchResult"
-              example: >-
-                {"files":[],"subfolders":[{"name":"Around The World in Eighty Days","modified":1613824559416,"path":"Verne Jules/Around The World in Eighty Days","is_file":false,"finished":false},
-                {"name":"Austene Jane","modified":1613941742570,"path":"Austene Jane","is_file":false,"finished":false}]}
+              example: 
+                value:
+                  {"files":[],"subfolders":[{"name":"Around The World in Eighty Days","modified":1613824559416,"path":"Verne Jules/Around The World in Eighty Days","is_file":false,"finished":false},
+                  {"name":"Austene Jane","modified":1613941742570,"path":"Austene Jane","is_file":false,"finished":false}]}
         "401":
           $ref: "#/components/responses/Unauthorized"
 
@@ -532,9 +521,10 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/SearchResult"
-              example: >-
-                {"files":[],"subfolders":[{"name":"Around The World in Eighty Days","modified":1613824559416,"path":"Verne Jules/Around The World in Eighty Days","is_file":false,"finished":false},
-                {"name":"Austene Jane","modified":1613941742570,"path":"Austene Jane","is_file":false,"finished":false}]}
+              example: 
+                value:
+                  {"files":[],"subfolders":[{"name":"Around The World in Eighty Days","modified":1613824559416,"path":"Verne Jules/Around The World in Eighty Days","is_file":false,"finished":false},
+                  {"name":"Austene Jane","modified":1613941742570,"path":"Austene Jane","is_file":false,"finished":false}]}
         "401":
           $ref: "#/components/responses/Unauthorized"
 
@@ -624,6 +614,41 @@ paths:
       parameters:
         - $ref: "#/components/parameters/GroupInPath"
       description: Last recent position for this group 
+      responses:
+        "200":
+          description: |-
+            Last recent position or null
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Position"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+
+  /positions/{group}/{col_id}/{path}:
+    get:
+      tags:
+        - Positions
+      parameters:
+        - $ref: "#/components/parameters/GroupInPath"
+        - $ref: "#/components/parameters/CollectionId"
+        - $ref: "#/components/parameters/Path"
+        - $ref: "#/components/parameters/Finished"
+        - $ref: "#/components/parameters/Unfinished"
+        - $ref: "#/components/parameters/From"
+        - $ref: "#/components/parameters/To"
+        - name: rec
+          description: |- 
+            Recursively look for all subdirectories
+          in: query
+          required: false
+          schema:
+            type: boolean
+      description: |-
+        Last recent position for given folder path (`path` can be empty to for root of collection, 
+        but in this case / must be present after  `col_id`` ).
+        If `rec` query parameter is given recursive search is done for this folder and all subfolders and
+        list of postions is returned.
       responses:
         "200":
           description: |-
@@ -787,6 +812,17 @@ components:
         - folder
         - file
         - position
+    SharedSecret:
+      type: object
+      properties:
+        secret:
+          type: string
+          description: Salted shared secret
+          example: "w8lTEszPU3idF9sEawmRR3Ps3IVdMEnnaFZj5DV5tqY=|6+iBRdZRz/o6fvwHiEuS2sgDZS6YCw7wNHVX59YCh50="
+          pattern: '^[A-Za-z0-9+/]+=*\|[A-Za-z0-9+/]+=*$'
+          maxLength: 250
+      required:
+        - "secret"
   parameters:
     CollectionId:
       name: col_id
